# pure_vorbis

./: .gitignore  .gitmodules  Cargo.toml  README.md
bench/: Cargo.toml  README.md
bench/tests/: bench.rs
examples/: play.rs
src/: bitstream.rs  codebook.rs  decoder.rs  error.rs  floor.rs  header.rs  huffman.rs  lib.rs  mapping.rs  mdct.rs  mode.rs  residue.rs  util.rs  window.rs
tests/: ref.rs
